# python_experiments

./: .prettierignore  flake.nix  license.md  pyproject.toml  pyrightconfig.json  readme.md  repo.py  sitecustomize.py
.github/workflows/: workflow.yml
src/python_experiments/: __init__.py  __main__.py  __version__.py  _cli.py  utils.py
tests/: conftest.py
tests/test_cli/: test_cli.py
tests/test_utils/: test_cancel_and_wait.py  test_context_logger.py  test_other_utils.py  test_retry.py  test_run_shell.py
